--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "i18next": "^24.2.2",
+    "@iconify/icons-logos": "^1.0.9",
+    "@iconify/react": "5.0.2",
+    "primereact": "^10.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0"
