--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "i18next": "^24.2.2",
     "@iconify/icons-logos": "^1.0.9",
     "@iconify/react": "5.0.2",
+    "i18next": "^24.2.2",
     "primereact": "^10.9.2",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0"
   },
