--- a/landit-next/package.json
+++ b/landit-next/package.json
@@ -10,21 +10,24 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
-    "geist": "^1.3.1",
-    "negotiator": "^0.6.3",
-    "next": "15.2.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@iconify/icons-logos": "^1.0.9",
     "@iconify/react": "5.0.2",
+    "geist": "^1.3.1",
+    "i18n": "^0.15.1",
+    "negotiator": "^0.6.3",
+    "next": "15.2.1",
+    "next-intl": "^3.26.5",
     "primereact": "^10.9.2",
+    "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.1",
     "react-iv-viewer": "^1.0.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20.15.0",
-    "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "eslint": "^9.17.0",
