--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
-  "name": "info-page",
+  "name": "next-landit",
+  "version": "0.1.0",
   "private": true,
-  "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@iconify/icons-logos": "^1.0.9",
     "@iconify/react": "5.0.2",
-    "i18next": "^24.2.2",
+    "geist": "^1.3.1",
+    "next": "15.2.1",
+    "next-intl": "^3.26.5",
     "primereact": "^10.9.2",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.4.0",
     "react-iv-viewer": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/negotiator": "^0.6.3",
+    "@types/node": "^20.15.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "typescript-eslint": "^8.18.2"
   }
 }
