--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ dist
 dist-ssr
 *.local
 .next
+out
 
 # Editor directories and files
 .vscode/*
@@ -23,5 +24,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+package-lock.json
+package-lock.json
 package-lock.json
 package-lock.json
