--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify/icons-logos": "^1.0.9",
     "@iconify/react": "5.0.2",
     "geist": "^1.3.1",
+    "lucide-react": "^0.546.0",
     "next": "15.2.1",
     "next-intl": "^3.26.5",
     "primereact": "^10.9.2",
