--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,6 +1,6 @@
 marcia-matias:
   name: Márcia B. Matias
-  title: LAND IT - Tech Lead
+  title: LAND IT - Technical Founder
   url: https://github.com/MarciaBM
   image_url: https://github.com/MarciaBM.png
   page: true
@@ -15,3 +15,7 @@ diogo-moreira:
   page: true
   socials:
     github: DiogoFSM
+    
+francisco-freire:
+  name: Francisco Freire
+  title: LAND IT - Tech Lead
